--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ padding-top:0 !important;
   
 <div align="center">
         <img src="/RoStats_/static/images/icons/Icon.png" width="350px" height="350px" style="margin-top: 35px; display: block">
-        <h2 style="margin-top: 15px; font-size: 35px; font-weight: 550; color: #edf0f1;">RoStats_</h2>
+        <h2 style="margin-top: 15px; font-size: 35px; font-weight: 550; color: #edf0f1;">RoStats</h2>
         <h3 style="margin-top: 2.5px; font-size: 35px; font-weight: 450; color: #7F7F7F;">Stats For You</h3>
         
         <div style="margin-top: 60px; display: flex; flex-flow: row; justify-content: center">
