--- a/static/pages/signup.html
+++ b/static/pages/signup.html
@@ -64,7 +64,7 @@
     
                 <header style="z-index: 9999;">
 
-                        <a href="/index.html"><h1>RoStats</h1></a>
+                       <a href="/RoStats_/index.html"><h1>RoStats</h1></a>
                     
                     <form name="searchForm" action="/RoStats_/static/pages/searching.html" method="POST" id="search_background" class="search_background">
                         <input type="hidden" name="csrfmiddlewaretoken" value="xvVe8j8ZsIB7koy7SMWeln2CW3k6MEgs9nblKGwlAJPHy46D5AjCU0JFpMEIzlw0">
